# event2vec_public

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
event2vec/: __init__.py  data.py
event2vector/: __init__.py  models.py
examples/: minimal_example.py  prepare_brown_data.py  train_brown_data.py  visualize_brown_corpus.py
substack/: event2vector_langagues.ipynb
